--- a/package.json
+++ b/package.json
@@ -8,15 +8,21 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "check-types": "tsc --pretty --noEmit",
+    "check-format": "prettier --check .",
+    "check-lint": "eslint . --ext ts --ext tsx --ext js",
+    "format": "prettier --write .",
+    "pre-commit": "lint-staged --concurrent false",
+    "prepare": "husky install",
+    "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build"
   },
   "dependencies": {
-    "eslint-config-airbnb-typescript": "^17.1.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.20.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "eslint-config-airbnb-typescript": "^17.1.0",
     "@types/react": "^18.2.15",
     "@types/react-datepicker": "^4.19.0",
     "@types/react-dom": "^18.2.7",
